--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: joe.kendall@gess.ethz.ch</p>
+        <p>Email: joe.kendall[at]gess.ethz.ch</p>
         <p>Twitter: <a href="https://twitter.com/joeakendall">@joeakendall</a></p>
     </section>
 
