--- a/research.html
+++ b/research.html
@@ -103,7 +103,7 @@ In this survey experiment I test the implications of rhetorical appeals to ‘wo
     </div>
 
     <div class="project" id="project3">
-        <p><a Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain a> (with Theresa Gessler)  <br>
+        <p><b>Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain<b> (with Theresa Gessler)  <br>
 We use embedded Wikipedia data to develop a novel computational measure of social proximity between individuals, and aggregate this over parliamentary periods in order to gauge how ties to slavery how persisted over time. Our analysis demonstrates how elite networks with dynastic connections to
 slavery persisted well into the 20th and 21st Centuries.</p>
     </div>
