--- a/projects.html
+++ b/projects.html
@@ -71,6 +71,10 @@
 
         .project {
             margin-bottom: 20px;
+            padding: 20px;
+            background-color: #cce5e5; /* Lighter teal project background color */
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
         }
 
         .project h3 {
