--- a/research.html
+++ b/research.html
@@ -121,17 +121,28 @@
     </nav>
 
     <section id="project1" class="project">
-        <h3><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a></h3>
-        <p>(under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
+        <h3><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a></h3> (under review) <br>
+        <p>This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
     </section>
 
     <section id="project2" class="project">
-        <h3><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a></h3>
-        <p>(under review). In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
+        <h3><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a></h3> (under review) <br>
+        <p>In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
     </section>
 
-    <!-- Add more sections for other projects as needed -->
+    <section id="project3" class="project">
+        <h3>Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain</h3> (with Theresa Gessler)  <br>
+<p>We use embedded Wikipedia data to develop a novel computational measure of social proximity between individuals, and aggregate this over parliamentary periods in order to gauge how ties to slavery how persisted over time. Our analysis demonstrates how elite networks with dynastic connections to
+slavery persisted well into the 20th and 21st Centuries. </p>
+    </section>
 
 </body>
 
 </html>
+
+
+    <div class="project" id="project3">
+        <p><b>Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain</b> (with Theresa Gessler)  <br>
+We use embedded Wikipedia data to develop a novel computational measure of social proximity between individuals, and aggregate this over parliamentary periods in order to gauge how ties to slavery how persisted over time. Our analysis demonstrates how elite networks with dynastic connections to
+slavery persisted well into the 20th and 21st Centuries. </p>
+    </div>
