--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         header {
             background-image: url('image3.jpg'); /* Background image for the header */
             background-size: cover; /* Cover the entire header */
-            background-position: center bottom; /* Center the background image vertically at the bottom */
-            background-attachment: fixed;
+            background-position: center center; /* Center the background image horizontally and vertically */
+            background-attachment: fixed; /* Fixed background position */
             opacity: 0.8; /* 20% more transparent */
             color: #333; /* Dark gray text color */
             padding: 1em;
