--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             background-image: url('image3.jpg'); /* Background image for the header */
             background-position: center center; /* Center the background image horizontally and vertically */
             background-attachment: fixed; /* Fixed background position */
+            background-size: 70%; /* Adjust the zoom level, you can experiment with different percentages */
             opacity: 0.8; /* 20% more transparent */
             color: #333; /* Dark gray text color */
             padding: 1em;
