--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 header {
     position: relative;
     background-image: url('image3.jpg'); /* Background image for the header */
-    background-position: center center; /* Center the background image horizontally and vertically */
+    background-position: center bottom; /* Center the background image horizontally and vertically */
     background-attachment: fixed; /* Fixed background position */
     background-size: cover; /* Cover the entire header */
     color: #333; /* Dark gray text color */
