--- a/index.html
+++ b/index.html
@@ -1,187 +1,142 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Astral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Astral by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joe Kendall</title>
-    <style>
-        body {
-            font-family: 'Yu Mincho', serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fff; /* Set base background color to white */
-            color: #333; /* Dark gray text color */
-            max-width: 1200px; /* Set max-width for the content */
-            min-width: 600px; /* Set min-width for the content */
-            margin-left: auto;
-            margin-right: auto;
-        }
+		<!-- Wrapper-->
+			<div id="wrapper">
 
-header {
-    position: relative;
-    background-image: url('image3.jpg'); /* Background image for the header */
-    background-position: center bottom; /* Center the background image horizontally and vertically */
-    background-attachment: fixed; /* Fixed background position */
-    background-size: cover; /* Cover the entire header */
-    color: #333; /* Dark gray text color */
-    padding: 1em;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
-}
+				<!-- Nav -->
+					<nav id="nav">
+						<a href="#" class="icon solid fa-home"><span>Home</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+					</nav>
 
-header::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.7); /* Set the background color with alpha (transparency) */
-}
+				<!-- Main -->
+					<div id="main">
 
-header h1, header p {
-    position: relative;
-    z-index: 1;
-    /* Set the z-index to place the text above the ::after overlay */
-}
+						<!-- Me -->
+							<article id="home" class="panel intro">
+								<header>
+									<h1>Jane Doe</h1>
+									<p>Senior Astral Projectionist</p>
+								</header>
+								<a href="#work" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+									<img src="images/me.jpg" alt="" />
+								</a>
+							</article>
 
+						<!-- Work -->
+							<article id="work" class="panel">
+								<header>
+									<h2>Work</h2>
+								</header>
+								<p>
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
+								</p>
+								<section>
+									<div class="row">
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+										</div>
+									</div>
+								</section>
+							</article>
 
-        header p {
-            font-weight: bold; /* Make the subtitle bold */
-        }
+						<!-- Contact -->
+							<article id="contact" class="panel">
+								<header>
+									<h2>Contact Me</h2>
+								</header>
+								<form action="#" method="post">
+									<div>
+										<div class="row">
+											<div class="col-6 col-12-medium">
+												<input type="text" name="name" placeholder="Name" />
+											</div>
+											<div class="col-6 col-12-medium">
+												<input type="text" name="email" placeholder="Email" />
+											</div>
+											<div class="col-12">
+												<input type="text" name="subject" placeholder="Subject" />
+											</div>
+											<div class="col-12">
+												<textarea name="message" placeholder="Message" rows="6"></textarea>
+											</div>
+											<div class="col-12">
+												<input type="submit" value="Send Message" />
+											</div>
+										</div>
+									</div>
+								</form>
+							</article>
 
-        #profile-image {
-            max-width: 350px; /* 146px * 2 for 100% larger */
-            float: right;
-            margin-left: 20px;
-            border-radius: 50%;
-        }
+					</div>
 
-        nav {
-            background-color: #99b3b3; /* Darker pale teal navigation background color */
-            overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
-        }
+				<!-- Footer -->
+					<div id="footer">
+						<ul class="copyright">
+							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
 
-        nav a {
-            float: left;
-            display: block;
-            color: #333;
-            text-align: center;
-            padding: 16px 20px; /* Adjusted padding */
-            text-decoration: none;
-            transition: background-color 0.3s; /* Smooth color transition on hover */
-        }
+			</div>
 
-        nav a:hover {
-            background-color: #cce5e5; /* Hover color for navigation links */
-        }
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-        section {
-            padding: 20px;
-            margin: 20px auto; /* Center the section */
-            background-color: #cce5e5; /* Lighter teal section background color */
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
-        }
-
-        section h2 {
-            color: #333; /* Dark gray section title color */
-        }
-
-        .project {
-            margin-bottom: 20px;
-        }
-
-        .project h3 {
-            color: #333; /* Dark gray project title color */
-        }
-
-        .project p {
-            color: #555; /* Dark gray text color for projects */
-            font-size: 16px; /* Make the text slightly larger */
-        }
-
-        .project a {
-            color: #333;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s; /* Smooth color transition on hover */
-        }
-
-        .project a:hover {
-            color: #e6f5f5; /* Hover color for project links */
-        }
-
-        #about {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            text-align: justify;
-        }
-
-        #about div {
-            flex: 1;
-            padding-right: 20px;
-        }
-
-        #about h2 {
-            color: #333; /* Dark gray about me title color */
-        }
-
-        #about p {
-            color: #555; /* Dark gray text color for about me section */
-        }
-
-        #about a {
-            font-weight: bold;
-        }
-
-        #contact {
-            padding: 20px;
-            margin: 20px auto;
-            background-color: #cce5e5;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-        }
-
-        #contact h2 {
-            color: #333; /* Dark gray contact title color */
-        }
-
-        #contact p {
-            color: #555; /* Dark gray text color for contact section */
-        }
-    </style>
-</head>
-
-<body>
-
-    <header>
-        <h1>Joe Kendall</h1>
-        <p>Postdoctoral Fellow - ETH Zurich</p>
-    </header>
-
-    <nav>
-        <a href="research.html">Research</a>
-        <a href="https://www.dropbox.com/scl/fi/zti1iwg8nb3q1rwe1fqx8/CV.pdf?rlkey=3ulkhpbi3bechh0crrmxl7xqz&dl=0" target="_blank">CV</a>
-    </nav>
-
-    <section id="about">
-        <div>
-            <h2>About Me</h2>
-            <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specializing in historical legacies, inter-group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
-        </div>
-        <img id="profile-image" src="image.jpg" alt="Profile Image">
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: joe.kendall[at]gess.ethz.ch</p>
-        <p>Twitter: <a href="https://twitter.com/joeakendall">@joeakendall</a></p>
-    </section>
-
-</body>
-
+	</body>
 </html>
