--- a/home.html
+++ b/home.html
@@ -157,7 +157,7 @@
     <section id="about">
         <div>
             <h2>About Me</h2>
-            <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specializing in historical legacies, inter-group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
+            <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specializing in historical legacies, citizenship, inter-group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
         </div>
         <img id="profile-image" src="image.jpg" alt="Profile Image">
     </section>
@@ -165,7 +165,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: joe.kendall[at]gess.ethz.ch</p>
-        <p>Twitter: <a href="https://twitter.com/joeakendall">@joeakendall</a></p>
+        <p>Bluesky: <a href="https://bsky.app/profile/joekendall.bsky.social">@joekendall.bsky.social</a></p>
     </section>
 
 </body>
