--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,58 +10,56 @@
             font-family: 'Yu Mincho', serif;
             margin: 0;
             padding: 0;
-            background-color: #fff; /* Set base background color to white */
-            color: #333; /* Dark gray text color */
-            max-width: 1200px; /* Set max-width for the content */
-            min-width: 600px; /* Set min-width for the content */
+            background-color: #fff;
+            color: #333;
+            max-width: 1200px;
+            min-width: 600px;
             margin-left: auto;
             margin-right: auto;
         }
 
-header {
-    position: relative;
-    background-image: url('image3.jpg'); /* Background image for the header */
-    background-position: center bottom; /* Center the background image horizontally and vertically */
-    background-attachment: fixed; /* Fixed background position */
-    background-size: cover; /* Cover the entire header */
-    color: #333; /* Dark gray text color */
-    padding: 1em;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
-}
+        header {
+            position: relative;
+            background-image: url('image3.jpg');
+            background-position: center bottom;
+            background-attachment: fixed;
+            background-size: cover;
+            color: #333;
+            padding: 1em;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-header::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.7); /* Set the background color with alpha (transparency) */
-}
+        header::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.7);
+        }
 
-header h1, header p {
-    position: relative;
-    z-index: 1;
-    /* Set the z-index to place the text above the ::after overlay */
-}
-
+        header h1, header p {
+            position: relative;
+            z-index: 1;
+        }
 
         header p {
-            font-weight: bold; /* Make the subtitle bold */
+            font-weight: bold;
         }
 
         #profile-image {
-            max-width: 350px; /* 146px * 2 for 100% larger */
+            max-width: 700px; /* Increased the size */
             float: right;
             margin-left: 20px;
             border-radius: 50%;
         }
 
         nav {
-            background-color: #99b3b3; /* Darker pale teal navigation background color */
+            background-color: #99b3b3;
             overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         nav a {
@@ -70,25 +67,25 @@ header h1, header p {
             display: block;
             color: #333;
             text-align: center;
-            padding: 16px 20px; /* Adjusted padding */
+            padding: 16px 20px;
             text-decoration: none;
-            transition: background-color 0.3s; /* Smooth color transition on hover */
+            transition: background-color 0.3s;
         }
 
         nav a:hover {
-            background-color: #cce5e5; /* Hover color for navigation links */
+            background-color: #cce5e5;
         }
 
         section {
             padding: 20px;
-            margin: 20px auto; /* Center the section */
-            background-color: #cce5e5; /* Lighter teal section background color */
+            margin: 20px auto;
+            background-color: #cce5e5;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
         }
 
         section h2 {
-            color: #333; /* Dark gray section title color */
+            color: #333;
         }
 
         .project {
@@ -96,23 +93,23 @@ header h1, header p {
         }
 
         .project h3 {
-            color: #333; /* Dark gray project title color */
+            color: #333;
         }
 
         .project p {
-            color: #555; /* Dark gray text color for projects */
-            font-size: 16px; /* Make the text slightly larger */
+            color: #555;
+            font-size: 16px;
         }
 
         .project a {
             color: #333;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s; /* Smooth color transition on hover */
+            transition: color 0.3s;
         }
 
         .project a:hover {
-            color: #e6f5f5; /* Hover color for project links */
+            color: #e6f5f5;
         }
 
         #about {
@@ -128,11 +125,11 @@ header h1, header p {
         }
 
         #about h2 {
-            color: #333; /* Dark gray about me title color */
+            color: #333;
         }
 
         #about p {
-            color: #555; /* Dark gray text color for about me section */
+            color: #555;
         }
 
         #about a {
@@ -148,11 +145,11 @@ header h1, header p {
         }
 
         #contact h2 {
-            color: #333; /* Dark gray contact title color */
+            color: #333;
         }
 
         #contact p {
-            color: #555; /* Dark gray text color for contact section */
+            color: #555;
         }
     </style>
 </head>
@@ -180,7 +177,7 @@ header h1, header p {
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: joe.kendall[at]gess.ethz.ch</p>
-        <p>"https://bsky.app/profile/joekendall.bsky.social">@joekendall.bsky.social</a></p>
+        <p><a href="https://bsky.app/profile/joekendall.bsky.social" target="_blank">@joekendall.bsky.social</a></p>
     </section>
 
 </body>
