--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         .project p {
             color: #555;
-            font-size: 30px;
+            font-size: 50px;
         }
 
         .project a {
@@ -164,7 +164,7 @@
 
     <nav>
         <a href="research.html">Research</a>
-        <a href="https://www.dropbox.com/scl/fi/zti1iwg8nb3q1rwe1fqx8/CV.pdf?rlkey=3ulkhpbi3bechh0crrmxl7xqz&dl=0" target="_blank">CV</a>
+        <a href="https://www.dropbox.com/scl/fi/jgs2gv37b8ajnjttcwyz2/CV.pdf?rlkey=zb30vfklr7obr7bo7i07eutyg&st=9l5lw8vx&dl=0">CV</a>
     </nav>
 
     <section id="about">
