--- a/research.html
+++ b/research.html
@@ -140,7 +140,7 @@ header h1, header p {
     </div>
 
     <div class="project" id="project2">
-        <p><b><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a></b> (R&R) <br>
+        <p><b><a href="https://www.dropbox.com/scl/fi/tcprlouu2t1hcd8l810pd/Kendall-We-Could-Have-Been-Worse_DropBox.pdf?rlkey=2j0nws3kb82tg4aqf0hba9b4n&st=vwf3kkcd&dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a></b> (R&R) <br>
         <p>In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
     </div>
 
