--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
             font-family: 'Yu Mincho', serif;
             margin: 0;
             padding: 0;
-            background-color: #fff;
+            background-color: #f8f8f8; /* Light background */
             color: #333;
             max-width: 1200px;
             min-width: 600px;
             margin-left: auto;
             margin-right: auto;
+            font-size: 18px; /* Increased font size */
+            line-height: 1.6; /* Improved line spacing */
         }
 
-  header {
-    position: relative;
-    background-image: url('image3.jpg');
-    background-position: center bottom;
-    background-attachment: fixed; /* Keep the background fixed */
-    background-size: cover; /* Ensure it covers the entire header */
-    color: #333;
-    padding: 2em 0; /* Adjusted padding for better spacing */
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    height: 400px; /* Set a fixed height for the header */
-}
+        header {
+            position: relative;
+            background-image: url('image3.jpg');
+            background-position: center bottom;
+            background-attachment: fixed;
+            background-size: cover;
+            color: #333;
+            padding: 2em 0;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            height: 400px;
+        }
 
         header::after {
             content: '';
@@ -44,28 +46,35 @@
         header h1, header p {
             position: relative;
             z-index: 1;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); /* Added text shadow */
+        }
+
+        header h1 {
+            font-size: 2.5em; /* Increased header font size */
         }
 
         header p {
             font-weight: bold;
+            font-size: 1.2em; /* Adjusted paragraph font size */
         }
 
         #profile-image {
-            max-width: 700px; /* Increased the size */
+            max-width: 300px; /* Adjusted image size */
             float: right;
             margin-left: 20px;
             border-radius: 50%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Added image shadow */
         }
 
         nav {
             background-color: #99b3b3;
             overflow: hidden;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: center; /* Center the navigation links */
         }
 
         nav a {
-            float: left;
-            display: block;
+            display: inline-block; /* Display links inline */
             color: #333;
             text-align: center;
             padding: 16px 20px;
@@ -78,39 +87,17 @@
         }
 
         section {
-            padding: 20px;
-            margin: 20px auto;
-            background-color: #cce5e5;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+            padding: 30px; /* Increased padding */
+            margin: 30px auto; /* Increased margin */
+            background-color: #fff; /* White section background */
+            border-radius: 12px; /* Increased border radius */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Deeper shadow */
         }
 
         section h2 {
             color: #333;
-        }
-
-        .project {
+            font-size: 2em; /* Increased section header size */
             margin-bottom: 20px;
-        }
-
-        .project h3 {
-            color: #333;
-        }
-
-        .project p {
-            color: #555;
-            font-size: 50px;
-        }
-
-        .project a {
-            color: #333;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-
-        .project a:hover {
-            color: #e6f5f5;
         }
 
         #about {
@@ -122,35 +109,39 @@
 
         #about div {
             flex: 1;
-            padding-right: 20px;
-        }
-
-        #about h2 {
-            color: #333;
+            padding-right: 30px; /* Increased padding */
         }
 
         #about p {
             color: #555;
+            margin-bottom: 20px;
         }
 
         #about a {
             font-weight: bold;
+            color: #007bff; /* Blue link color */
+            text-decoration: none;
+        }
+
+        #about a:hover {
+            text-decoration: underline;
         }
 
         #contact {
-            padding: 20px;
-            margin: 20px auto;
-            background-color: #cce5e5;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-        }
-
-        #contact h2 {
-            color: #333;
+            text-align: center;
         }
 
         #contact p {
-            color: #555;
+            margin-bottom: 10px;
+        }
+
+        #contact a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        #contact a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
