--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
             font-family: 'Yu Mincho', serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8; /* Light background */
+            background-color: #f8f8f8;
             color: #333;
             max-width: 1200px;
             min-width: 600px;
             margin-left: auto;
             margin-right: auto;
-            font-size: 18px; /* Increased font size */
-            line-height: 1.6; /* Improved line spacing */
+            font-size: 18px;
+            line-height: 1.6;
         }
 
         header {
             position: relative;
             background-image: url('image3.jpg');
-            background-position: center center; /* Center image */
-            background-repeat: no-repeat; /* Prevent image repetition */
-            background-size: cover; 
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: contain; /* Use 'contain' to fit within the header */
             color: #333;
             padding: 2em 0;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            height: 200px; /* Increased header height */
+            height: 300px; /* Adjust height as needed */
         }
 
         header::after {
@@ -46,35 +46,36 @@
         header h1, header p {
             position: relative;
             z-index: 1;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); /* Added text shadow */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
         }
 
         header h1 {
-            font-size: 2.8em; /* Increased header font size */
+            font-size: 2.8em;
         }
 
         header p {
             font-weight: bold;
-            font-size: 1.3em; /* Adjusted paragraph font size */
+            font-size: 1.3em;
         }
 
         #profile-image {
-            max-width: 350px; /* Increased image size */
+            width: 350px; /* Adjusted image width */
+            height: auto; /* Maintain aspect ratio */
             float: right;
             margin-left: 20px;
             border-radius: 50%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Added image shadow */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         nav {
             background-color: #99b3b3;
             overflow: hidden;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            text-align: center; /* Center the navigation links */
+            text-align: center;
         }
 
         nav a {
-            display: inline-block; /* Display links inline */
+            display: inline-block;
             color: #333;
             text-align: center;
             padding: 16px 20px;
@@ -87,16 +88,16 @@
         }
 
         section {
-            padding: 30px; /* Increased padding */
-            margin: 30px auto; /* Increased margin */
-            background-color: #fff; /* White section background */
-            border-radius: 12px; /* Increased border radius */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Deeper shadow */
+            padding: 30px;
+            margin: 30px auto;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         section h2 {
             color: #333;
-            font-size: 2.2em; /* Increased section header size */
+            font-size: 2.2em;
             margin-bottom: 20px;
         }
 
@@ -109,7 +110,7 @@
 
         #about div {
             flex: 1;
-            padding-right: 30px; /* Increased padding */
+            padding-right: 30px;
         }
 
         #about p {
@@ -119,7 +120,7 @@
 
         #about a {
             font-weight: bold;
-            color: #007bff; /* Blue link color */
+            color: #007bff;
             text-decoration: none;
         }
 
@@ -154,24 +155,18 @@
     </header>
 
     <nav>
-        <a href="research.html" style="font-size: 1.1em;">Research</a> 
-        <a href="https://www.dropbox.com/scl/fi/jgs2gv37b8ajnjttcwyz2/CV.pdf?rlkey=zb30vfklr7obr7bo7i07eutyg&st=9l5lw8vx&dl=0" style="font-size: 1.1em;">CV</a> 
+        <a href="research.html" style="font-size: 1.1em;">Research</a>
+        <a href="https://www.dropbox.com/scl/fi/jgs2gv37b8ajnjttcwyz2/CV.pdf?rlkey=zb30vfklr7obr7bo7i07eutyg&st=9l5lw8vx&dl=0" style="font-size: 1.1em;">CV</a>
     </nav>
 
-<style>
-    #profile-image {
-        width: 300px; /* Adjust as needed */
-        height: auto;
-    }
-</style>
+    <section id="about">
+        <div>
+            <h2>About Me</h2>
+            <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specializing in historical legacies, inter-group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
+        </div>
+        <img id="profile-image" src="image.jpg" alt="Profile Image">
+    </section>
 
-<section id="about">
-    <div>
-        <h2>About Me</h2>
-        <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specializing in historical legacies, inter-group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
-    </div>
-    <img id="profile-image" src="image.jpg" alt="Profile Image">
-</section>
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: joe.kendall[at]gess.ethz.ch</p>
