--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
 
         header {
             position: relative;
-            background-image: url('image4.jpg');
+            background-image: url('image5.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: contain;
@@ -145,7 +145,7 @@
 
     <section>
         <div class="project" id="project1">
-            <p><b><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a></b> (under review) <br>
+            <p><b><a href="https://www.dropbox.com/scl/fi/uzruird12shvdbyk7jy3q/Kendall-Blood-Runs-Thicker-Than-Water.pdf?rlkey=uancpxek58at0ogu0ve06dglq&st=kmb4ywzn&dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a></b> (under review) <br>
                 This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
         </div>
 
