--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <nav>
         <a href="research.html" style="font-size: 1.1em;">Research</a>
-        <a href="https://www.dropbox.com/scl/fi/jgs2gv37b8ajnjttcwyz2/CV.pdf?rlkey=zb30vfklr7obr7bo7i07eutyg&st=9l5lw8vx&dl=0" style="font-size: 1.1em;">CV</a>
+        <a href="https://www.dropbox.com/scl/fi/d0pf5dww97ish46drjrzb/CV.pdf?rlkey=6fmd3gcwmbykjrktcn0rpeb9p&st=yqzmzoya&dl=0" style="font-size: 1.1em;">CV</a>
     </nav>
 
     <section id="about">
