--- a/research.html
+++ b/research.html
@@ -162,6 +162,19 @@
         </div>
     </section>
 
+        <div class="project" id="project4">
+            <p><b>Birthright Citizenship Closes Immigrants' Political and Social Integration Gap to Native Citizens</b> (with Jacopo Bassetto, Philip Grech, Dominik Hangartner, Giuseppe Pietrantuono, Helmut Rainer, and Malte Sandner)<br>
+                Utilising original survey data focusing on children of immigrants born within two months of the 2000 citizenship reform in Germany, we study the long-run effects of birthright citizenship on inter-group integration. The results demonstrate that birthright citizenship promotes higher levels of social and political integration especially among those with parents from Muslim-
+majority countries.</p>
+        </div>
+    </section>
+
+        <div class="project" id="project5">
+            <p><b>Asylum Granted: The Integration and Well-Being Benefits of Attaining Refugee Status</b> (with Marine Casalis, Dominik Hangartner, Alexandra C. Hartman, and Rodrigo Sanchez Sienra)<br>
+                We assess the impact of achieving refugee status on a range of social and economic indicators among asylum-seekers in Greece. Combining UNHCR data with an original survey, we implement a difference-in-differences design around the staggered granting of legal status, demonstrating that receiving refugee status greatly improves levels of psychological distress and inter-group integration.</p>
+        </div>
+    </section>
+
 </body>
 
 </html>
